# BitSqueeze

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_backup.md  digest.txt  run_all_tests.sh
.github/workflows/: ci.yml  test_fetch.yml  test_shared.yml
cmake/: BitSqueezeConfig.cmake.in
docs/: float_family.md  iq2_family.md  q2_k_variants.md
docs/ggml_iq2/: ggml-quant.c
docs/iq2_family/: iq2_xxs.excalidraw
docs/iq2_family/ggml_iq2/: ggml-common.h
examples/cmake_fetch/: CMakeLists.txt  main.c
examples/mxfp4_compression/: CMakeLists.txt  main.c
examples/shared_library/: Makefile  demo_app
examples/shared_library/include/: bitsqueeze.h
include/: bitsqueeze.h  k_quantization.h  sparsity.h
include/datatype/: bf16.h
include/datatype/fp16/: fp16.h
include/float_quantization/: bf16_impl.h  fp16_impl.h  fp4_impl.h  fp8_impl.h  mxfp4_impl.h  mxfp8_impl.h  nf4_dq_impl.h  nf4_impl.h  nvfp4_impl.h
include/int_quantization/: iq2_s_impl.h  iq2_xs_impl.h  iq2_xxs_impl.h  q2_k_fast_impl.h  q2_k_impl.h  q4_0_impl.h  q8_0_impl.h
include/sparsity/: topk_im_impl.h  topk_impl.h
include/utils/: evaluation.h
src/: bitsqueeze.c  k_quantization.c  sparsity.c
src/float_quantization/: bf16_impl.c  fp16_impl.c  fp4_impl.c  fp8_impl.c  mxfp4_impl.c  mxfp8_impl.c  nf4_dq_impl.c  nf4_impl.c  nvfp4_impl.c
src/int_quantization/: iq2_s_impl.c  iq2_xs_impl.c  iq2_xxs_impl.c  q2_k_fast_impl.c  q2_k_impl.c  q4_0_impl.c  q8_0_impl.c
src/sparsity_quantization/: topk_im_impl.c  topk_impl.c
src/utils/: random.c
test/: test_bf16_impl.c  test_fp16.c  test_fp16_impl.c  test_fp4_impl.c  test_fp8_impl.c  test_iq2_s_impl.c  test_iq2_xs_impl.c  test_iq2_xxs_impl.c  test_k_quantization.c  test_mxfp4_impl.c  test_mxfp8_impl.c  test_nf4_dq_impl.c  test_nf4_impl.c  test_nvfp4_impl.c  test_q2_k_fast_impl.c  test_q2_k_im_impl.c  test_q2_k_impl.c  test_q4_0_impl.c  test_q8_0_impl.c  test_real_example.c  test_sparsity.c  test_topk_im_impl.c  test_topk_impl.c
test/legacy/: test_activation_example.c  test_bf16_datatype.c  test_fp16_datatype.c
test/test_real_example/: test_activation_example.c
